changed phone number and fixed text wrapping

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -155,6 +155,10 @@ a:hover,
   background: white;
 }
 
+.no-line-break{
+  white-space: nowrap;
+}
+
 
 /*For mobile phones: -----------------------------------------------------------------------------------------------------*/
 @media only screen and (max-width: 400px) {
